# SmartMealSystem

./: .gitignore  CMakeLists.txt  MealRecommendationSystem.sln  MealRecommendationSystem.vcxproj  MealRecommendationSystem.vcxproj.filters  README.md  TASTE_PREFERENCES_UPDATE.md  TEST_TASTE_PREFERENCES.md  USAGE_GUIDE.md  WHITEBOX_TESTING_GUIDE.md  comprehensive_fix.py  debug_calc  debug_calculation.cpp  fix_encoding.py  fix_encoding_v2.py  test_utf8  test_utf8.cpp
docs/: 专业系统能力实训报告-第7组-完整版.docx  专业系统能力实训报告-第7组-完整版.md  专业系统能力实训报告-第7组完成版.docx  专业系统能力实训报告-第7组完成版.md
include/: Database.h  User.h  WebServer.h
src/: Database.cpp  Food.cpp  Meal.cpp  RecommendationEngine.cpp  User.cpp  Utils.cpp  WebServer.cpp  main.cpp
tests/: whitebox_tests.cpp
www/: app.js  index.html  style.css
